<resources>
    <string name="app_name">UMP</string>
    <string name="language_cn">简体中文</string>
    <string name="language_en">ENGLISH</string>
    <string name="language_traditional">繁體中文</string>
    <string name="tab_main_home">首页</string>
    <string name="tab_main_hospital">诊所</string>
    <string name="tab_to_video">去问诊</string>
    <string name="tab_main_find">发现</string>
    <string name="tab_main_my">我的</string>
    <string name="tab_order_type1">套餐订单</string>
    <string name="tab_order_type2">处方订单</string>
    <string name="tab_order_type1_to_pay">待付款</string>
    <string name="tab_order_type1_finish">已完成</string>
    <string name="tab_order_type1_all">全部</string>
    <string name="tab_order_type2_to_pay">待付款</string>
    <string name="tab_order_type2_to_send">待发货</string>
    <string name="tab_order_type2_to_received">已发货</string>
    <string name="tab_order_type2_finish">已完成</string>
    <string name="tab_order_type2_all">全部</string>
    <string name="tab_my_coupon1">未使用</string>
    <string name="tab_my_coupon2">已使用</string>
    <string name="tab_my_coupon3">已过期</string>
    <string name="tab_all_card">全部</string>
    <string name="tab_useing_card">使用中</string>
    <string name="tab_used_card">已失效</string>
    <string name="tab_my_inquiry1">待问诊</string>
    <string name="tab_my_inquiry2">已完成</string>
    <string name="tab_my_inquiry3">全部</string>
    <string name="tab_my_inquiry4">问诊异常</string>
    <string name="tab_my_evaluate1">待评价</string>
    <string name="tab_my_evaluate2">已评价</string>
    <string name="tab_my_evaluate3">全部</string>
    <string name="str_file1">image</string>
    <string name="str_file2">word</string>
    <string name="str_file3">xls</string>
    <string name="str_file4">ppt</string>
    <string name="str_file5">pdf</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="please_input_phone_right">请输入正确的手机号码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="login_success">登录成功</string>
    <string name="quit_the_application">退出此应用</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="please_enter_account_number">请输入手机号</string>
    <string name="please_enter_phone_or_account">请输入手机号/账号/会员号</string>
    <string name="tips_input_password">请输入密码</string>
    <string name="tip_language">语言：</string>
    <string name="language1">简体中文</string>
    <string name="language2">繁体中文</string>
    <string name="language3">English</string>
    <string name="label_login">登录</string>
    <string name="label_register_now">立即注册</string>
    <string name="label_forget_pswd">找回密码</string>
    <string name="label_third_party_login">第三方登录</string>
    <string name="titile_register">注册</string>
    <string name="please_input_verifycode">请输入验证码</string>
    <string name="please_input_psd_onece">请再次输入密码</string>
    <string name="password_inconsistency">两次密码不一致</string>
    <string name="please_read_agree">请阅读并勾选协议</string>
    <string name="label_get_code">获取验证码</string>
    <string name="label_remaining">剩余</string>
    <string name="label_remaining_time">剩余%1$s天%2$s小时%3$s分</string>
    <string name="label_seconds">秒</string>
    <string name="msg_register_success">注册成功</string>
    <string name="msg_get_code_success">获取验证码成功</string>
    <string name="label_please_set_login_password">请设置登录密码（6-14）</string>
    <string name="label_please_confirm_the_login_password">请确认登录密码（6-14）</string>
    <string name="label_agree_with_the_protocol">已同意并接受协议所有内容</string>
    <string name="label_register">注册</string>
    <string name="label_input_new_psd">请输入新密码</string>
    <string name="label_please_input_new_psd_again">请再次输入新密码</string>
    <string name="label_code_has_been_sent_to">验证码已发送至</string>
    <string name="please_set_new_psd">请设置新密码（6-14）</string>
    <string name="please_confirm_new_psd">请确认新密码（6-14）</string>
    <string name="label_confirm_change">确认修改</string>
    <string name="label_86">+86(大陆)</string>
    <string name="label_852">+852(香港)</string>
    <string name="label_bind_phone">绑定手机号</string>
    <string name="label_bind_error">绑定异常</string>
    <string name="label_confirm_bind">确认绑定</string>
    <string name="label_change_psd">修改登录密码</string>
    <string name="please_input_old_psd">请输入原密码</string>
    <string name="label_two_new_passwords_do_not_match">两次输入的新密码不一致</string>
    <string name="msg_change_psd_success">密码修改成功</string>
    <string name="label_new_psd">新密码</string>
    <string name="please_confirm_psd">请确认密码</string>
    <string name="please_input_pay_psd">请输入支付密码</string>
    <string name="label_set_pay_psd">设置支付密码</string>
    <string name="msg_setting_success">设置成功</string>
    <string name="label_clinic_appointment">诊所预约</string>
    <string name="label_need_to_enable_phone_access">拨打电话需要开启电话权限?</string>
    <string name="msg_permission_to_call_has_been_denied">已拒绝权限了拨打电话的权限</string>
    <string name="label_permission_denied_and_eject_disabled">请开启电话权限</string>
    <string name="label_profile_details">问诊详情</string>
    <string name="title_video_inquiry">视频问诊</string>
    <string name="label_notice_and_agree">请阅读并同意注意事项</string>
    <string name="please_select_package_type">请选择套餐</string>
    <string name="label_members_package">会员套餐</string>
    <string name="label_notice_buy_packge_agree">我已阅读并接受</string>
    <string name="label_notice_buy_packge_agree1">《视频问诊套餐购买须知》及《视频问诊注意事项》</string>
    <string name="label_amount">金额(¥)：</string>
    <string name="label_confirm_pay">确认支付</string>
    <string name="label_pay">支付</string>
    <string name="msg_order_error">订单异常！</string>
    <string name="msg_order_generation_failed">订单生成异常</string>
    <string name="label_pay_error">支付异常</string>
    <string name="label_pay_success">支付成功</string>
    <string name="msg_pay_failed">支付失败</string>
    <string name="msg_authorization_success">授权成功</string>
    <string name="label_authorization_fail">授权失败</string>
    <string name="label_package_order_name">订单名称:</string>
    <string name="label_package_order_num">套餐编号:</string>
    <string name="label_total">总计:</string>
    <string name="label_total_package_num">共1件商品</string>
    <string name="label_total_package_price">共计:</string>
    <string name="label_select_pay_type">请选择支付方式</string>
    <string name="label_pay_weixin">微信</string>
    <string name="label_pay_ali">支付宝</string>
    <string name="label_pay_amount">余额</string>
    <string name="lable_user_coupon">使用优惠券</string>
    <string name="label_pay_price">金额(¥):</string>
    <string name="label_pay_confirm">确认支付</string>
    <string name="label_input_check_report">录入检查报告</string>
    <string name="label_notice_select_check_report_pic">请选择检查报告图片</string>
    <string name="label_notice_select_department">请选择科室</string>
    <string name="msg_please_input_examine_time">请输入检查日期</string>
    <string name="msg_input_examine_name">请输入检查名称</string>
    <string name="msg_input_medical_institutions">请输入医疗机构</string>
    <string name="msg_input_examine_look">请输入体检所见</string>
    <string name="label_pic">图片</string>
    <string name="msg_save_success">保存成功！</string>
    <string name="label_examine_date">检查日期</string>
    <string name="label_examine_name">检查名称</string>
    <string name="label_medical_institutions">医疗机构</string>
    <string name="label_administrative_office">科室</string>
    <string name="label_please_click_select">请点击选择</string>
    <string name="label_examination_finding">检查所见</string>
    <string name="tips_input_examination_finding">请输入您的检查所见(200字以内)......</string>
    <string name="label_examin_pic">检查图片</string>
    <string name="tips_plase_keep_the_picture_clear">请保证图片清晰</string>
    <string name="label_update_pic">上传图片</string>
    <string name="label_please_click_to_select_picture">选择图片</string>
    <string name="label_save">保存</string>
    <string name="label_input_examination_report">录入体检报告</string>
    <string name="please_input_examination_date">请输入体检日期</string>
    <string name="please_input_examination_name">请输入体检名称</string>
    <string name="label_examination_time">体检日期</string>
    <string name="label_examination_name">体检名称</string>
    <string name="label_Input_image_data">录入影像资料</string>
    <string name="label_please_image_result">请输入体检结论</string>
    <string name="label_image_date">影像日期</string>
    <string name="label_image_name">影像名称</string>
    <string name="label_input_image_name">请输入影像名称</string>
    <string name="label_image_part">影像部位</string>
    <string name="please_input_image_part">请输入影像部位</string>
    <string name="tip_please_input_image_result">请输入您的检查所见(500字以内)......</string>
    <string name="label_image_result">检查结论</string>
    <string name="elelabel_ctronic_medical_record">电子病历</string>
    <string name="label_be_married">已婚</string>
    <string name="label_spinsterhood">未婚</string>
    <string name="label_birth">出生日期:</string>
    <string name="label_age">年 龄:</string>
    <string name="label_medical_record_num">病历号:</string>
    <string name="label_marital_status">婚姻状况:</string>
    <string name="label_phone">电话：</string>
    <string name="label_id_card">身份证号：</string>
    <string name="label_health_data">健康数据</string>
    <string name="label_click_look"><![CDATA[点击查看>]]></string>
    <string name="label_allergic_history">过敏史</string>
    <string name="label_family_medical_history">家族史</string>
    <string name="label_previous_history">既往史</string>
    <string name="label_examination_report">体检报告</string>
    <string name="label_image_data">影像资料</string>
    <string name="label_survey_report">检验报告</string>
    <string name="label_latest_health_data">最新身体健康数据</string>
    <string name="tips_height">身高(cm):</string>
    <string name="tips_animal_heat">体温(℃):</string>
    <string name="tips_blood_pressure">血压(mmHg):</string>
    <string name="tips_head_circumference">头围(cm):</string>
    <string name="tips_weight">体重(kg):</string>
    <string name="tips_blood_glucose">血糖(mmol/L):</string>
    <string name="tips_pulse">脉搏(次/分钟):</string>
    <string name="label_look_history_health_data">查看历史健康数据</string>
    <string name="label_medical_record">就诊记录</string>
    <string name="label_vital_signs1">生命体征</string>
    <string name="label_vital_signs2">Vital signs</string>
    <string name="label_examination_report1">Medical report</string>
    <string name="label_survey_report1">Inspection report</string>
    <string name="label_image_data1">Image data</string>
    <string name="label_check_name">检验名称:</string>
    <string name="label_check_result">检验结果:</string>
    <string name="label_history_health_data">历史健康数据</string>
    <string name="label_select_pic">选择图片</string>
    <string name="label_fill_inquiry_information">填写问诊信息</string>
    <string name="tip_input_inqury_language">请选择问诊语言</string>
    <string name="msg_please_intpur_name">请填写姓名</string>
    <string name="msg_please_input_birth">请设置出生日期</string>
    <string name="msg_please_input_weight">请输入体重</string>
    <string name="msg_please_input_symptoms_described">请输入症状描述</string>
    <string name="notice_input_inquiry">急重症患者不适合视频问诊，请立即前往当地医院就诊!</string>
    <string name="label_info_base">基本信息</string>
    <string name="label_inquiry_laguage">语言服务:</string>
    <string name="tips_click_to_select">请点击选择</string>
    <string name="label_name">姓 名:</string>
    <string name="label_gender">性 别:</string>
    <string name="label_male">男</string>
    <string name="label_female">女</string>
    <string name="label_inquiry_now">立即问诊</string>
    <string name="label_foresee_tab1">产品优势</string>
    <string name="label_foresee_tab2">使用须知</string>
    <string name="label_foresee_tab3">常见问题</string>
    <string name="label_to_home">去首页</string>
    <string name="label_app_name">联合医务视频问诊</string>
    <string name="label_853">+853(澳门)</string>
    <string name="login_by_psd">通过账号密码登录</string>
    <string name="thanks_use">感谢您的使用,获取更多的优惠，请购买套餐卡</string>
    <string name="restart_think">再考虑</string>
    <string name="buy_package">购买套餐卡</string>
</resources>