<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_center_dialog">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/bg_bottom_line"
        android:textColor="@color/textColor1"
        android:padding="18dp"
        android:gravity="center"
        android:text="@string/thanks_use"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/confirm_cancel_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="15sp"
        android:textColor="@color/btn_color1"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:gravity="center"
        android:text="@string/restart_think"/>
    <View
        android:layout_width="0.5dp"
        android:layout_height="match_parent"
        android:background="#d9d9d9"/>
    <TextView
        android:id="@+id/confirm_buy_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="15sp"
        android:paddingBottom="15dp"
        android:textColor="@color/textColor13"
        android:gravity="center"
        android:text="@string/buy_package"/>
    </LinearLayout>
</LinearLayout>