<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_center_dialog"
    android:paddingTop="@dimen/len_20">


    <TextView
        android:id="@+id/tv_language1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/len_12"
        android:paddingBottom="@dimen/len_12"
        android:text="@string/language_cn"
        android:textColor="@color/textColor1"
        android:textSize="@dimen/font_16" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lineColor1" />


    <TextView
        android:id="@+id/tv_language2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/len_12"
        android:paddingBottom="@dimen/len_12"
        android:text="@string/language_traditional"
        android:textColor="@color/textColor1"
        android:textSize="@dimen/font_16" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lineColor1" />


    <TextView
        android:id="@+id/tv_language3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/len_12"
        android:paddingBottom="@dimen/len_12"
        android:text="@string/language_en"
        android:textColor="@color/textColor1"
        android:textSize="@dimen/font_16" />


</LinearLayout>