<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.account.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_to_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/len_24"
            android:layout_marginTop="@dimen/len_32"
            android:text="@string/label_to_home"
            android:textColor="@color/textColor5"
            android:textSize="@dimen/font_16" />

        <ImageView
            android:layout_width="@dimen/len_100"
            android:layout_height="@dimen/len_88"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/len_32"
            android:src="@mipmap/icon_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/len_10"
            android:gravity="center"
            android:text="@string/label_app_name"
            android:textColor="@color/textColor14"
            android:textStyle="bold"
            android:visibility="gone" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/len_28"
            android:layout_marginTop="@dimen/len_48"
            android:layout_marginRight="@dimen/len_28"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/len_14"
                android:layout_height="@dimen/len_14"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/icon_account" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/len_10"
                android:layout_marginRight="@dimen/len_28"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/please_enter_account_number"
                android:inputType="phone"
                android:textColorHint="@color/hintColor1"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/font_14" />

            <LinearLayout
                android:id="@+id/ll_phone_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/len_20">

                <TextView
                    android:id="@+id/tv_phone_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="+86"
                    android:textColor="@color/hintColor1"
                    android:textSize="@dimen/font_14" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="@dimen/len_10"
                    android:src="@mipmap/icon_right" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/len_28"
            android:layout_marginTop="@dimen/len_8"
            android:layout_marginRight="@dimen/len_28"
            android:background="@color/lineColor1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/len_28"
            android:layout_marginTop="@dimen/len_28"
            android:layout_marginRight="@dimen/len_28"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/len_14"
                android:layout_height="@dimen/len_14"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/iocn_psd" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/len_10"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/please_input_verifycode"
                android:inputType="textPassword"
                android:textColorHint="@color/hintColor1"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/font_14" />

            <TextView
                android:id="@+id/tv_get_verification_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/label_get_code"
                android:textColor="@color/textColor2"
                android:textSize="@dimen/font_14"
                android:visibility="visible" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/len_28"
            android:layout_marginTop="@dimen/len_8"
            android:layout_marginRight="@dimen/len_28"
            android:background="@color/lineColor1" />


        <LinearLayout
            android:id="@+id/ll_phone_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/len_28"
            android:layout_marginTop="@dimen/len_6"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_code_has_been_sent_to"
                android:textColor="@color/textColor1"
                android:textSize="@dimen/font_12" />

            <TextView
                android:id="@+id/tv_phone_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor2"
                android:textSize="@dimen/font_12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/len_28"
            android:layout_marginTop="@dimen/len_16"
            android:layout_marginRight="@dimen/len_28"
            android:visibility="gone"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_language"
                android:textColor="@color/textColor1"
                android:textSize="@dimen/font_14" />

            <TextView
                android:id="@+id/tv_language1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/len_8"
                android:drawableLeft="@drawable/btn_check"
                android:drawablePadding="@dimen/len_8"
                android:text="@string/language1"
                android:gravity="center_vertical"
                android:textColor="@color/textColor1"
                android:textSize="@dimen/font_12" />

            <TextView
                android:id="@+id/tv_language2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/len_8"
                android:drawableLeft="@drawable/btn_check"
                android:drawablePadding="@dimen/len_8"
                android:text="@string/language2"
                android:gravity="center_vertical"
                android:textColor="@color/textColor1"
                android:textSize="@dimen/font_12"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/tv_language3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/len_8"
                android:drawableLeft="@drawable/btn_check"
                android:drawablePadding="@dimen/len_8"
                android:gravity="center_vertical"
                android:text="@string/language3"
                android:textColor="@color/textColor1"
                android:textSize="@dimen/font_12"
                android:visibility="gone"
              />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/len_48"
            android:layout_marginLeft="@dimen/len_24"
            android:layout_marginTop="@dimen/len_40"
            android:layout_marginRight="@dimen/len_24"
            android:background="@drawable/btn_login"
            android:text="@string/label_login"
            android:textColor="@color/white"
            android:textSize="@dimen/font_16" />

        <TextView
            android:id="@+id/tv_change_login_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/len_24"
            android:layout_marginTop="@dimen/len_16"
            android:layout_marginRight="@dimen/len_24"
            android:gravity="center"
            android:paddingBottom="@dimen/len_10"
            android:text="@string/login_by_psd"
            android:textColor="@color/textColor2"
            android:textSize="@dimen/font_14" />


        <LinearLayout
            android:id="@+id/ll_login_weixin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/len_48"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/label_third_party_login"
                android:textColor="@color/textColor3"
                android:textSize="@dimen/font_12" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/len_14"
                android:src="@mipmap/icon_weixin" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/font_18"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingLeft="@dimen/font_18"
                android:paddingTop="@dimen/len_12"
                android:paddingRight="@dimen/font_18"
                android:text="@string/label_register_now"
                android:textColor="@color/textColor1"
                android:textSize="@dimen/font_14" />


            <TextView
                android:id="@+id/tv_forget_psd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:paddingLeft="@dimen/font_18"
                android:paddingTop="@dimen/len_12"
                android:paddingRight="@dimen/len_28"
                android:text="@string/label_forget_pswd"
                android:textColor="@color/textColor1"
                android:textSize="@dimen/font_14" />
        </LinearLayout>
    </LinearLayout>

    <it.swiftelink.com.common.widget.stateview.StateView
        android:id="@+id/stateView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/trans"
        android:visibility="gone" />
</FrameLayout>