<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_center_dialog"
    android:paddingTop="@dimen/len_20">

    <LinearLayout
        android:id="@+id/ll_phone_type1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_language1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/len_20"
            android:paddingBottom="@dimen/len_20"
            android:text="@string/label_86"
            android:textColor="@color/textColor1"
            android:textSize="@dimen/font_16" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lineColor1" />

    <LinearLayout
        android:id="@+id/ll_phone_type2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_language2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/len_20"
            android:paddingBottom="@dimen/len_20"
            android:text="@string/label_852"
            android:textColor="@color/textColor1"
            android:textSize="@dimen/font_16" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lineColor1" />

    <LinearLayout
        android:id="@+id/ll_phone_type3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/len_20"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_language3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/len_20"
            android:paddingBottom="@dimen/len_20"
            android:text="@string/label_853"
            android:textColor="@color/textColor1"
            android:textSize="@dimen/font_16" />
    </LinearLayout>

</LinearLayout>